# receipt-and-invoice-rest-api

./: .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  flake8.yml  main.yml
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  services.py
app/core/: config.py
app/routers/v1/: __init__.py  invoice.py  ocr.py  receipt.py  receipt_test.py
static/: hayda.md
