[tool.poetry]
name = "receipt-and-invoice-rest-api"
version = "0.1.0"
description = ""
authors = ["Fatih Sarhan <f9n@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
dnspython = "^2.2.1"
beanie = "^1.10.8"
motor = "^2.5.1"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
